--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+click==8.1.7
+colorama==0.4.6
+jellyfish==1.0.1
+networkx==3.1
 numpy==1.26.0
+regex==2023.8.8
+segtok==1.5.11
+tabulate==0.9.0
+yake==0.4.8
